testsuite/tests/typecheck/should_fail/AssocTyDef03.stderr
AssocTyDef03.hs:6:5: error: [GHC-52347]
    • Wrong category of family instance; declaration was for a data family.
    • In the default associated data family instance declaration for ‘Typ’
      In the class declaration for ‘Cls’

